# sdl-cmake-template

./: .editorconfig  CMakeLists.txt  README.md
src/: common.h  game.c  game.h  main.c  timer.c  timer.h
src/utils/: buffer.c  buffer.h  logging.h  math.h  vec.c  vec.h
